add get all sub Categories (sub sub categories) route doc
